# audio-to-text-transcription

./: output_pt.txt  pyproject.toml
